[package]
name = "rust_demo"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "Simple Rust N-API demo exposing string utilities to JavaScript"
license = "MIT"
rust-version = "1.88.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
